--- a/frontend/UI_PREVIEW.html
+++ b/frontend/UI_PREVIEW.html
@@ -1,3 +1,7 @@
+<!--
+  Author: Daksha009
+  Repo: https://github.com/Daksha009/AirSense-Guardian.git
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -293,7 +297,7 @@
                     AirSense Guardian - Community-driven air quality intelligence
                 </p>
                 <p class="text-gray-500 text-xs mt-2">
-                    Built with ❤️ for cleaner air and healthier communities
+                    Built with ❤️ for cleaner air and healthier communities | Made by Daksha009
                 </p>
             </div>
         </footer>
